--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # 全局 API 地址
 ## 需部署 API，详见 https://github.com/Binaryify/NeteaseCloudMusicApi
-VITE_MUSIC_API = "https://api-music.imsyy.top/"
+VITE_MUSIC_API = "https://netease-cloud-music-api-rho-six.vercel.app/"
 
 # 网易云解灰 API 地址（可选功能）
 ## 需部署 API，详见 https://github.com/imsyy/UNM-Server#%E8%BF%90%E8%A1%8C
 VITE_UNM_API = "https://api-unm.imsyy.top/"
 
 # 站点标题
-VITE_SITE_TITLE = "SPlayer"
+VITE_SITE_TITLE = "无敌冰音乐"
 VITE_SITE_ANTHOR = "無名"
-VITE_SITE_KEYWORDS = "SPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器,在线音乐播放器"
+VITE_SITE_KEYWORDS = "云音乐,播放器,在线音乐,在线播放器,音乐播放器,在线音乐播放器"
 VITE_SITE_DES = "一个简约的在线音乐播放器，具有音乐搜索、播放、每日推荐、私人FM、歌词显示、歌曲评论、网易云登录与云盘等功能"
 VITE_SITE_URL = "imsyy.top"
 VITE_SITE_LOGO = "/images/logo/favicon.svg"
