--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 ## 需部署 API，详见 https://github.com/Binaryify/NeteaseCloudMusicApi
-VITE_MUSIC_API = "https://netease-cloud-music-api-rho-six.vercel.app/"
+VITE_MUSIC_API = "https://api.188sf.top/"
 
 # 网易云解灰 API 地址（可选功能）
 ## 需部署 API，详见 https://github.com/imsyy/UNM-Server#%E8%BF%90%E8%A1%8C
